k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: opslab
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
